@@ -610,8 +610,9 @@ devconfig2:
 			DEVCFG2_UNUSED
 
 devconfig1:
-	.long	DEVCFG1_FNOSC_POSCPLL   | DEVCFG1_POSCMOD_HS     | \
-			CONFIG_PIC32MX_PBDIV    | DEVCFG1_FCKSM_NONE     | \
+	.long	DEVCFG1_FNOSC_POSCPLL   | CONFIG_PIC32MX_FSOSCEN | \
+			CONFIG_PIC32MX_IESO     | CONFIG_PIC32MX_POSCMOD | \
+			CONFIG_PIC32MX_PBDIV    | CONFIG_PIC32MX_FCKSM   | \
 			CONFIG_PIC32MX_WDENABLE | DEVCFG1_UNUSED
 
 devconfig0:
